--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -46,7 +46,7 @@
 $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
-$foundation-palette: ( primary: #1779ba, secondary: #767676, success: #3adb76, warning: #ffae00, alert: #cc4b37, );
+$foundation-palette: ( primary: #03a9f4, secondary: #767676, success: #3adb76, warning: #ffae00, alert: #cc4b37, );
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
